Prosody function added

--- a/VILTMaker/Base.lproj/Main.storyboard
+++ b/VILTMaker/Base.lproj/Main.storyboard
@@ -683,6 +683,6 @@
         <simulatedScreenMetrics key="destination" type="ipad12_9.fullscreen"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="RqO-3c-dHa"/>
+        <segue reference="15K-HM-Zbk"/>
     </inferredMetricsTieBreakers>
 </document>
